[package]
name = "madcad-core"
version = "0.19.1"
edition = "2021"
license = "LGPL-3.0"
description = "Rust core for pymadcad - CAD library"
authors = ["jimy-byerley <jimy.byerley@gmail.com>"]

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
vecmat = "0.7"
# For spatial hashing
rustc-hash = "2.0"
# For small stack-allocated collections
heapless = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
