[project]
name = "pymadcad"
version = "0.19.1"
description = "Simple yet powerful CAD (Computer Aided Design) library, written with Python"
authors = [
    { name="jimy-byerley", email="jimy.byerley@gmail.com" },
    { name="bourbonut", email="bourbonut@gmail.com" },
    ]
license = {text = "LGPL v3"}
readme = "README.md"
classifiers = [
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    ]
requires-python = ">=3.10"
dependencies = [
    'pyglm~=2.5',
    'moderngl~=5.6',
    'numpy>=1.1,<3',
    'scipy~=1.3',
    'pillow>5,<12',
    'pyyaml>=5,<7',
    'arrex~=0.5.1',
    'pnprint~=1.1',
    'freetype-py~=2.3',
    ]

[project.optional-dependencies]
pyside6 = ["pyside6"]
pyqt6 = ["pyqt6"]
pyqt5 = ["pyqt5"]
ply = ['plyfile>=0.7']
stl = ['numpy-stl~=2.0']
obj = ['pywavefront~=1.3']

[project.urls]
homepage = "https://madcad.netlify.app/pymadcad"
repository = "https://github.com/jimy-byerley/pymadcad"
documentation = "https://pymadcad.readthedocs.io"


# === Build system: maturin for Rust extension ===
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Compiled module location: madcad/core.so
module-name = "madcad.core"
# Python package is at repository root
python-source = "."
# Strip symbols for smaller binaries
strip = true
# Rust source directory
manifest-path = "Cargo.toml"

# === Poetry for dev dependencies (optional, for local development) ===
[tool.poetry.group.dev.dependencies]
pytest = "~=8.3"
pnprint = "~=1.1"
moderngl = "~=5.12.0"
pyside6 = "~=6.6.3.1"
plyfile = "~=0.7"
numpy-stl = "~=2.0"
maturin = "~=1.7"

# enhance pytest default output
[tool.pytest.ini_options]
addopts = "-v -rF --no-header --tb=short"
