[project]
name = "pymadcad"
version = "0.19.1"
description = "Simple yet powerful CAD (Computer Aided Design) library, written with Python"
authors = [
    { name="jimy-byerley", email="jimy.byerley@gmail.com" },
    { name="bourbonut", email="bourbonut@gmail.com" },
    ]
license = {text = "LGPL v3"}
readme = "README.md"
classifiers = [
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    ]
requires-python = ">=3.10"
dependencies = [
    'pyglm~=2.5',
    'moderngl~=5.6',
    'numpy>=1.1,<3',
    'scipy~=1.3',
    'pillow>5,<12',
    'pyyaml>=5,<7',
    'arrex~=0.5.1',
    'pnprint~=1.1',
    'freetype-py~=2.3',
    ]

[project.optional-dependencies]
pyside6 = ["pyside6"]
pyqt6 = ["pyqt6"]
pyqt5 = ["pyqt5"]
ply = ["plyfile>=0.7"]
stl = ["numpy-stl~=2.0"]
obj = ["pywavefront~=1.3"]
dev = [
    "pytest~=8.3",
    "maturin~=1.7",
]

[project.urls]
homepage = "https://madcad.netlify.app/pymadcad"
repository = "https://github.com/jimy-byerley/pymadcad"
documentation = "https://pymadcad.readthedocs.io"


# === Build system: maturin for Rust extension ===
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Compiled module location: madcad/core.so
module-name = "madcad.core"
# Python package is at repository root
python-source = "."
# Strip symbols for smaller binaries
strip = true
# Rust source directory
manifest-path = "Cargo.toml"

# enhance pytest default output
[tool.pytest.ini_options]
addopts = "-v -rF --no-header --tb=short"
